<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_job"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.jobtracker.EditJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/vertLin2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/customer_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_textView2"
                style="@style/FormFields"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:backgroundTint="@color/editTextLine"
                android:text=""
                android:ems="10"
                android:id="@+id/customer_editText2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/bid_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/bid_textView2"
                style="@style/FormFields"
                android:layout_marginRight="20dp"/>

            <TextView
                android:text="@string/money_sign"
                android:textAlignment="textEnd"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:id="@+id/moneySign2_textView"
                style="@style/FormFields"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/editTextLine"
                android:textAlignment="textEnd"
                android:text="0.00"
                android:ems="10"
                android:id="@+id/bid_editText2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/start_date_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/start_date_textView2"
                style="@style/FormFields"
                android:layout_marginRight="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"

                android:id="@+id/start_date_editText2"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/completion_date_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/completion_date_textView2"
                style="@style/FormFields"
                android:layout_marginRight="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/completion_date_editText2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormFields"
                android:text="@string/current_employees" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/curSkills_textView"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <cz.destil.settleup.gui.MultiSpinner
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/FormFields"
                android:id="@+id/multi_spinner_edit_job"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="13dp"
                android:onClick="UpdateJob"/>
            <Button
                android:text="@string/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_gravity="right"
                android:onClick="DeleteJob"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
