<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_employee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.jobtracker.AddEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/vertLin2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/fname_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/fname_textView"
                style="@style/FormFields"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:backgroundTint="@color/editTextLine"
                android:text=""
                android:ems="10"
                android:id="@+id/fname_editText2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/lname_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/lname_textView"
                style="@style/FormFields"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:backgroundTint="@color/editTextLine"
                android:text=""
                android:ems="10"
                android:id="@+id/lname_editText2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/hourly_wage_field"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/hourlyWage_textView2"
                style="@style/FormFields"
                android:layout_marginRight="20dp"/>

            <TextView
                android:text="@string/money_sign"
                android:textAlignment="textEnd"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:id="@+id/moneySign_textView2"
                style="@style/FormFields"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/editTextLine"
                android:textAlignment="textEnd"
                android:text="0.00"
                android:ems="10"
                android:id="@+id/hrwage_editText2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormFields"
                android:text="@string/current_skills"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/curSkills_textView"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <cz.destil.settleup.gui.MultiSpinner
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/FormFields"
                android:id="@+id/multi_spinner_edit"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormFields"
                android:text="@string/current_jobs"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/curJob_textView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <cz.destil.settleup.gui.MultiSpinner
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/FormFields"
                android:id="@+id/multi_spinner_edit2"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="13dp"
                android:id="@+id/add_emp_button"
                android:onClick="UpdateEmployee"/>
            <Button
                android:text="@string/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_gravity="right"
                android:onClick="DeleteEmployee"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/vertLin2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp"
        android:id="@+id/edit_testView" />
</RelativeLayout>